syntax = "proto3";

package posts;

service PostService {
    rpc CreatePost(PostCreateDTO) returns (Post);
    rpc UpdatePost(PostUpdateDTO) returns (Post);
    rpc DeletePost(PostDeleteDTO) returns (Empty);
    rpc GetPost(GetOnePostDTO) returns (Post);
    rpc GetPosts(GetManyPostsDTO) returns (Post);
}

message PostCreateDTO {
    string user_id = 1;
    optional string title = 2;
    optional string desc = 3;
}

message PostUpdateDTO {
    string id = 1;
    string user_id = 2;
    optional string title = 3;
    optional string desc = 4;
}

message PostDeleteDTO {
    string id = 1;
    string user_id = 2;
}

message GetOnePostDTO {
    string id = 1;
}

message GetManyPostsDTO {
    optional string user_id = 1;
    optional string title = 2;
    optional string ids = 3;
    optional string desc = 4;
}

message Post {
    string id = 1;
    string user_id = 2;
    string title = 3;
    int32 createdAt = 4;
    string desc = 5;
}

message Empty {}