syntax = "proto3";

package user;

service UserService {
    rpc FindOne (FindUserDTO) returns (stream User);
    rpc FollowUser (FollowUserDTO) returns (stream IsFollow);
}

message GetSubscribeDTO {
    string user_id = 1;
}

message FollowUserDTO {
    string user_id = 1;
    string follower_id = 2;
}

message FindUserDTO {
    FindUserBy criteria = 1;
    UserFields fields = 2;
}

enum UserFields {
    followers = 0;
    subscriptions = 1;
}

message IsFollow {
    bool isFollow = 1;
}

message FindUserBy {
    string email = 1;
    string id = 2;
    string lastName = 3;
}

message User {
    string id = 1;
    string email = 2;
    string username = 3;
    string lastName = 4;
    string password = 5;
    User followers = 6;
    User subscriptions = 7;
    UserState state = 8;
}

enum UserState {
    UNACTIVE = 0;
    ACTIVE = 1;
}

message Empty {}